src/containers/home/components/social/social.css
.a-social {
  position: fixed;
  bottom: 12px;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
}

.a-social-fixed .a-social {
  position: absolute;
  bottom: 50px;
}

.a-social__icon {
  height: 40px;
  width: 40px;
  border-radius: 40px;
  box-shadow: 0 2px 4px rgba(0,0,0,.3);
}

.a-social__icon:not(:first-child) {
  margin-left: 12px;
}

